// the following three lines should always be in the proto file
syntax = "proto3";

package Passivereplication; // module that you called in the go.mod

option go_package = "grpc/proto";


service DistributedDictionary{
    rpc Add (AddReq) returns (AddRes){}
    rpc Read (ReadReq) returns (ReadRes){}
    rpc GetLeaderRequest(Empty) returns (LeaderMessage) {}
    rpc Replicate(ReplicationAdd) returns (ReplicationAddRes) {}
    
}

message AddReq {
    string word = 1;
    string def = 2; 
}

message AddRes{
    bool accepted = 1;
}

message ReadReq {
    string word = 1;
}

message ReadRes {
    string def = 1;
}



message Empty {}


message LeaderMessage {
    int32 id = 1;
    bool isLeader = 2;
}

message ReplicationAdd {
    string word = 1;
    string def = 2; 
}

message ReplicationAddRes {
}



//go mod init PassiveReplcation (Hvad mappen hedder)
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc/proto.proto
//go mod tidy